
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;
typedef int off_t ;



__attribute__((used)) static void offtout(off_t x,u_char *buf)
{
 off_t y;

 if(x<0) y=-x; else y=x;

  buf[0]=y%256;y-=buf[0];
 y=y/256;buf[1]=y%256;y-=buf[1];
 y=y/256;buf[2]=y%256;y-=buf[2];
 y=y/256;buf[3]=y%256;y-=buf[3];
 y=y/256;buf[4]=y%256;y-=buf[4];
 y=y/256;buf[5]=y%256;y-=buf[5];
 y=y/256;buf[6]=y%256;y-=buf[6];
 y=y/256;buf[7]=y%256;

 if(x<0) buf[7]|=0x80;
}
